removed z-index10 to prevent sg icon from showing on scroling body into fixed header

--- a/src/css/form.css
+++ b/src/css/form.css
@@ -77,7 +77,7 @@
   
   .form-row .invalid {
     border-color: darkred;
-    background-color: hsl(0, 30%, 95%);
+    /* background-color: hsl(0, 30%, 95%); */
     margin-bottom: 0em;
   }
 
@@ -115,7 +115,7 @@
     position: absolute;
     padding-left: .5rem;
     color: #acb1b5;
-    z-index: 10;
+    /* z-index: 10; */
     font-weight: 600;
     /* padding-top: .15rem; */
     /* adjust accordingly depending on SVG design */
